# ParalleleProgrammierung

./: .gitignore  CMakeLists.txt
Blatt 3/: Blatt 3.tex
Blatt 3/LaTeX/: Blatt 3.tex
Blatt 3/MatrixMult/: matmult  matmult.c  performance.sh  performanceOSx.sh
Blatt 3/openmp/: whoami.c
Blatt 4/: A2Speed.txt  A3Speedup.txt  AnotherAttempt.c  Blatt4_OpenMP_A1.c  Blatt4_OpenMP_A2.c  Blatt4_OpenMP_A3.c  Blatt4_OpenMP_A3_2ndTry.c  Blatt4_OpenMP_A3_Final.c  PrefixSum  PrefixSum.c  performance.sh  performanceA3.sh  quicksort.c
Blatt 4/LaTex/: Blatt 4.tex
Blatt_5/: mandelbrot.c  mpiA1.c  out.txt  paraMandel.c  performanceA2.sh
Blatt_5/LaTex/: Blatt_5.tex
Blatt_6/: Antworten.txt  Makefile  andi.c  gauss5x5.c  gauss5x5_AVX+OMP.c  gauss5x5_AVXonly.c  gauss5x5orig.c  lena.pgm  lena_out.pgm  out.txt  performance.sh  pocLoad.cpp  test.c
Blatt_6/LaTex/: Blatt_6.tex
Blatt_7/: CMakeLists.txt  Test.c  answers  mmParallel.c  mmParallel2.c  mmParallelSIMD.c  mmSerial.c
Blatt_7/LaTex/: Blatt_7.tex
MatMult/MatMult/: main.c
MatMult/MatMult.xcodeproj/: project.pbxproj
MatMult/MatMult.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MatMult/MatMult.xcodeproj/project.xcworkspace/xcuserdata/tillbusse.xcuserdatad/: UserInterfaceState.xcuserstate
MatMult/MatMult.xcodeproj/xcuserdata/tillbusse.xcuserdatad/xcschemes/: xcschememanagement.plist
MatrixMult/: main.c  matmult  matmult.c  performanceResult.phi
PosixOverhead/: main.c  run.sh
ThreadSort/: threadsort.c
